--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
                             }
                             
                             .nav-links ul a {
-                                color: orangered;
+                                color: white;
                                 text-shadow: black;
                                 text-decoration: none;
                                 font-size: 18px;
@@ -73,20 +73,20 @@
                             #about {
                                 height: 700px;
                                 display: inline-block;
-                                background-color: blue;
+                                background-color: lightblue;
                                 width: 100%;
                             }
                             
                             #blog {
                                 width: 100%;
                                 height: 700px;
-                                background-color: yellow
+                                background-color: gray
                             }
                             
                             #menu {
                                 width: 100%;
                                 height: 700px;
-                                background-color: green;
+                                background-color: skyblue;
                             }
                             
                             #contact {
@@ -102,20 +102,94 @@
                             
                             .footer {
                                 background: #303036;
-                                color: white;
-                                height: 400px;
-                                width: 100%;
-                                position: absolute;
+                                color: rgb(167, 88, 88);
+                                display: black;
+                                overflow: hidden;
+                                padding: 70px 0;
+                                width: 100vw;
+                                box-sizing: border-box;
                             }
                             
-                            .footer.footer-bottom {
-                                background: #343a40;
-                                color: red;
-                                height: 50px;
+                            .inner-footer {
+                                display: balck;
+                                margin: 0 auto;
+                                width: 1100px;
+                                height: 100%;
+                            }
+                            
+                            .inner-footer .logo-container {
+                                width: 35%;
+                                float: left;
+                                height: 100%;
+                                display: block;
+                            }
+                            
+                            .inner-footer .logo-container img {
+                                width: 120px;
+                                height: auto;
+                            }
+                            
+                            .inner-footer .logo-container span {
+                                font-family: 'arial';
+                                font-size: 14px;
+                                color: gray;
+                                display: block;
+                                font-weight: 200;
                                 width: 100%;
-                                text-align: center;
-                                position: absolute;
-                                bottom: 0px;
-                                left: 0px;
-                                padding-top: 20px;
+                                padding-bottom: 5px;
+                            }
+                            
+                            .inner-footer .footer_third {
+                                width: calc (21.6666666667% - 20px);
+                                margin-right: 10px;
+                                float: left;
+                                height: 100%;
+                                color: white;
+                            }
+                            
+                            .inner-footer .footer_third:last-child {
+                                margin-right: 0;
+                            }
+                            
+                            .inner-footer .footer_third h1 {
+                                font-family: 'italic';
+                                font-size: 30px;
+                                color: yellowgreen;
+                                display: block;
+                                width: 100%;
+                                margin-bottom: 20px;
+                            }
+                            
+                            .inner-footer .footer_third a {
+                                font-family: 'arial';
+                                font-size: 18px;
+                                color: white;
+                                display: block;
+                                font-weight: 200;
+                                width: 100%;
+                                padding-bottom: 5px;
+                            }
+                            
+                            .inner-footer .footer_third li {
+                                font-size: 20px;
+                                padding: 0 5px;
+                                display: inline-block;
+                            }
+                            
+                            .inner-footer .footer_third span {
+                                color: red;
+                                font-family: 'Arial';
+                                font-size: 16px;
+                                font-weight: 200;
+                            }
+                            
+                            @media(max-width:800px) {
+                                .footer.inner-footer {
+                                    width: 90%;
+                                }
+                                .inner-footer.logo-container,
+                                .inner-footer.footer_third {
+                                    width: 100%;
+                                    margin-bottom: 30px;
+                                }
                             }
